--- a/package.json
+++ b/package.json
@@ -8,5 +8,13 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "express": "^4.18.1",
+    "json-web-token": "^3.2.0",
+    "mongoose": "^6.5.0",
+    "nodemon": "^2.0.19",
+    "socket.io": "^4.5.1"
+  }
 }
