fixing yarn errors

--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "Follow Up API",
+  "name": "follow-up-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index",
-    "build": "babel src -d lib"
+    "start": "nodemon index"
   },
   "keywords": [],
   "author": "Imran",
